[package]
name = "yagidb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zerocopy = "0.6.1"
bincode = "1.3.3"
serde = { version = "1.0.130", features = ["derive"] }

[dev-dependencies]
tempfile = "3.5.0"
md-5 = "0.10.5"
sha-1 = "0.10.1"
